HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumDuplicateDiscriminant/Expected.uv
//! Expected diagnostic metadata for the EnumDuplicateDiscriminant rejected-source specimen.

expectedDiagnostic("E-TYP-1923", "Enum-Disc-Dup")
